# face-rs

./: .gitignore  Cargo.toml  build.rs  notes.md
.devcontainer/: Dockerfile  devcontainer.json
scripts/: compile_facenet-pytorch.py  compile_mtcnn.py  mx2onnx.py  pb2savedmodel.py
src/: build_model.py  detection.rs  images.rs  lib.rs  main.rs  utils.rs
tools/: build.py
